# Kursach_3

./: README.md  main.py  pyproject.toml
tests/: test_code.py
utils/: encoding_data.py  func.py
